--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  dart_code_metrics: ^5.4.0
-  surf_lint_rules: ^1.0.0
+  flutter_svg: ^1.1.6
+
 
 dev_dependencies:
+  dart_code_metrics: ^5.4.0
   flutter_test:
     sdk: flutter
+  surf_lint_rules: ^1.0.0
 
 flutter:
   uses-material-design: true
