--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,19 @@ dev_dependencies:
     sdk: flutter
   surf_lint_rules: ^1.0.0
 
+flutter_gen:
+  integrations:
+    flutter_svg: true
+
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/
     - assets/fonts/
     - assets/fonts/Roboto/
+    - assets/images/
   fonts:
     - family: Roboto
       fonts:
