--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^1.1.6
+  geolocator: ^9.0.2
   intl: ^0.17.0
 
 
@@ -40,7 +41,6 @@ flutter:
   fonts:
     - family: Roboto
       fonts:
-        - asset: assets/fonts/Roboto/Roboto-Regular.ttf
         - asset: assets/fonts/Roboto/Roboto-Black.ttf
         - asset: assets/fonts/Roboto/Roboto-BlackItalic.ttf
         - asset: assets/fonts/Roboto/Roboto-Bold.ttf
