--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.6
   geolocator: ^9.0.2
+  hive_flutter: ^1.1.0
   intl: ^0.17.0
+  provider: ^6.0.5
 
 
 dev_dependencies:
